# github_ci_example

./: CMakeLists.txt  README.md  application.cpp  application.h  main.cpp  test_set_position.cpp
.github/workflows/: test.yml
